[project]
name = "zuora-seed-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=1.1.0",
    "bedrock-agentcore-starter-toolkit==0.2.5",
    "boto3>=1.41.5",
    "botocore[crt]>=1.42.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "rich==14.2.0",
    "strands-agents==1.18.0",
    "typer==0.20.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation>=0.49b0",
    "opentelemetry-instrumentation-requests>=0.49b0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "aws-opentelemetry-distro>=0.5.0",
    "urllib3>=1.26.0,<2.0.0",
    "cachetools==5.3.0",
    "jellyfish==1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
